# detectron2

./: pyproject.toml
docs/: requirements.txt
